<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingTop="4dp"
  android:paddingBottom="18dp"
  android:paddingLeft="8dp"
  android:paddingRight="8dp"
  android:orientation="vertical">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:orientation="horizontal">
    <TextView
      android:id="@+id/text_line_number"
      android:text="@string/line"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/rounded_background"
      android:textColor="@android:color/white"
      android:textSize="24sp" />

    <TextView
      android:id="@+id/text_to"
      android:text="@string/to"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:paddingStart="10dp"
      android:paddingEnd="6dp"/>

    <TextView
      android:id="@+id/text_direction"
      android:text="@string/bus_stop_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="22sp"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp"
    android:orientation="horizontal">
  <TextView
    android:id="@+id/text_in"
    android:text="@string/in"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="6dp"
    android:textSize="16sp" />

  <TextView
    android:id="@+id/text_wait_time"
    android:text="@string/time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20sp"
    android:textStyle="bold"
    android:paddingStart="6dp"
    android:paddingEnd="10dp"/>

  <TextView
    android:id="@+id/text_delay_type"
    android:text="@string/delay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="14sp" />

    <TextView
      android:id="@+id/text_delay"
      android:text="@string/time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:paddingStart="6dp"
      android:paddingEnd="14dp"/>
  </LinearLayout>
</LinearLayout>
